# FastMailMCP

./: LICENSE  README.md  fastmail_mcp_server.py  fastmail_mcp_server.ts  gitignore.txt  pyproject.toml  pyproject.toml.txt  requirements.txt  test_server.py  test_server_py.py
